--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 <body>
   <div id="container">
     <span id="money"></span>
+    <span id="mps">Money Per Sec: $0</span>
     <div class="item" id="wind">Wind: 0</div>
     <div class="item" id="water">Water: 0</div>
+    <span id="buyW">Buy Water: $100</span>
+    <span id="buyWin">Buy Wind: $1000</span>
   </div>
 
   <script src="main.js"></script>
